--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         />
 
     <Button
-        android:id="@+id/view_body_data"
+        android:id="@+id/button_view_body_data"
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
