--- a/app/src/main/res/layout/activity_record_uric_acid.xml
+++ b/app/src/main/res/layout/activity_record_uric_acid.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecordBloodPressure">
+    tools:context=".RecordUricAcid">
 
     <TextView
-        android:id="@+id/upper_bp_val_hint"
+        android:id="@+id/uric_acid_val_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/blood_upper_pressure_val"
+        android:text="@string/uric_acid_val"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="70dp"
@@ -19,39 +19,40 @@
         />
 
     <EditText
-        android:id="@+id/upper_bp_input"
+        android:id="@+id/uric_acid_input"
         android:textSize="20sp"
         android:layout_width="80dp"
         android:inputType="number"
         android:layout_height="wrap_content"
         android:background="#D3D3D3"
-        app:layout_constraintStart_toEndOf="@+id/upper_bp_val_hint"
+        app:layout_constraintStart_toEndOf="@+id/uric_acid_val_hint"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="@+id/upper_bp_val_hint"
+        app:layout_constraintTop_toTopOf="@+id/uric_acid_val_hint"
         />
 
     <TextView
-        android:id="@+id/lower_bp_val_hint"
+        android:id="@+id/blood_sugar_val_hint"
         android:textSize="20sp"
-        android:text="@string/blood_lower_pressure_val"
+        android:text="@string/blood_sugar_val"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/upper_bp_val_hint"
+        app:layout_constraintTop_toBottomOf="@+id/uric_acid_val_hint"
         android:layout_marginTop="70dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="10dp"
         />
 
     <EditText
-        android:id="@+id/lower_bp_input"
+        android:id="@+id/blood_sugar_input"
         android:textSize="20sp"
         android:layout_width="80dp"
         android:inputType="number"
         android:layout_height="wrap_content"
         android:background="#D3D3D3"
-        app:layout_constraintTop_toTopOf="@+id/lower_bp_val_hint"
-        app:layout_constraintStart_toEndOf="@+id/lower_bp_val_hint"
+        app:layout_constraintTop_toTopOf="@+id/blood_sugar_val_hint"
+        app:layout_constraintStart_toEndOf="@+id/blood_sugar_val_hint"
         android:layout_marginStart="20dp"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
