--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/app_name"
-        android:title="@string/Help"></item>
+    <item
+        android:id="@+id/help_tab"
+        android:title="@string/Help" />
 </menu>
