Bind recycler view with fragment and view body data activity

--- a/app/src/main/res/layout/activity_view_body_data.xml
+++ b/app/src/main/res/layout/activity_view_body_data.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ViewBodyData">
+
 
     <FrameLayout
         android:id="@+id/view_data_fl_container"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/view_data_button_group"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
+        android:id="@+id/view_data_button_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@id/view_data_fl_container"
-        app:layout_constraintTop_toTopOf="@+id/view_data_fl_container">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <RadioButton
             android:id="@+id/view_bp_radio_button"
