--- a/app/src/main/res/layout/fragment_view_blood_pressure.xml
+++ b/app/src/main/res/layout/fragment_view_blood_pressure.xml
@@ -9,7 +9,9 @@
         android:layout_height="match_parent"
         android:id="@+id/blood_pressure_recycler_view"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
