--- a/app/src/main/res/layout/fragment_view_uric_acid.xml
+++ b/app/src/main/res/layout/fragment_view_uric_acid.xml
@@ -9,6 +9,8 @@
         android:layout_height="match_parent"
         android:id="@+id/uric_acid_recycler_view"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
