--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,15 @@
         <item name="android:layout_weight">1</item>
     </style>
 
+    <style name="choose_style_button_tag_style">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:textColor">@drawable/tab_word_selector</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
 </resources>
