--- a/app/src/main/res/layout/activity_record_uric_acid.xml
+++ b/app/src/main/res/layout/activity_record_uric_acid.xml
@@ -4,7 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecordUricAcid">
+    tools:context=".activities.RecordUricAcid">
+
+    <TextView
+        android:id="@+id/record_ua_date_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/date"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"/>
+
+    <TextView
+        android:id="@+id/record_ua_date"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/record_ua_date_hint"
+        app:layout_constraintStart_toStartOf="@+id/uric_acid_input" />
+
+    <ImageButton
+        android:id="@+id/record_ua_date_picker_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/record_ua_date_hint"
+        app:layout_constraintStart_toEndOf="@+id/record_ua_date"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/ic_baseline_calendar_today_24"
+        android:contentDescription="Date picker" />
+
+    <TextView
+        android:id="@+id/record_ua_time_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/time"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/record_ua_date_hint"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"/>
+
+    <TextView
+        android:id="@+id/record_ua_time"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/record_ua_time_hint"
+        app:layout_constraintStart_toStartOf="@+id/uric_acid_input" />
+
+    <ImageButton
+        android:id="@+id/record_ua_time_picker_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/record_ua_time_hint"
+        app:layout_constraintStart_toStartOf="@+id/record_ua_date_picker_button"
+        android:background="@drawable/ic_baseline_access_time_24"
+        android:contentDescription="Time picker" />
+
 
     <TextView
         android:id="@+id/uric_acid_val_hint"
@@ -12,11 +70,10 @@
         android:layout_height="wrap_content"
         android:text="@string/uric_acid_val"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@+id/record_ua_time_hint"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="10dp"
-        />
+        android:layout_marginStart="10dp" />
 
     <EditText
         android:id="@+id/uric_acid_input"
