--- a/app/src/main/res/menu/view_data_menu.xml
+++ b/app/src/main/res/menu/view_data_menu.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/edit_historical_data"
-        android:title="@string/edit"
-        />
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/help_in_view_data"
         android:title="@string/Help"
