--- a/app/src/main/res/layout/activity_view_body_data.xml
+++ b/app/src/main/res/layout/activity_view_body_data.xml
@@ -7,6 +7,28 @@
     android:orientation="vertical"
     tools:context=".activities.ViewBodyData">
 
+
+    <TextView
+        android:id="@+id/info_window_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/info_window_bondary"
+        android:elevation="5dp"
+        android:visibility="gone" />
+    <ImageButton
+        android:id="@+id/cancel_info_window"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_close_24"
+        app:layout_constraintTop_toTopOf="@+id/info_window_text"
+        app:layout_constraintEnd_toEndOf="@+id/info_window_text"
+        android:layout_marginEnd="20dp"
+        android:elevation="10dp"
+        android:visibility="gone"/>
+
+
     <RadioGroup
         android:id="@+id/view_data_presentation_button_group"
         android:layout_width="match_parent"
